=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0 CA
 - Added: Added missing Fact Tags to Note.php (windmillway)
 - Merged: Merge changes r5105 - r5121 from the trunk. (windmillway)
 - Added: Level 1 NOTE @Nxxx@ Shared Note support for Indi - Notes Tab page (windmillway)
 - Fixed: case 'deletenote' in edit_interface.php (By adding function deletesource() in phpgedview.js). (windmillway)
 - Changed: all "shnote" occurrences removed. (windmillway)
 - Changed: renamed several more "shnote" occurrences (Only 14 remaining) (windmillway)
 - Merged: Merge changes r5096 - r5104 from the trunk. (windmillway)
 - Changed: File name shnote_ctrl to note_ctrl (windmillway)
 - Changed: File names shnote.php, shnotelist.php, class_shnote.php to note.php, notelist.php, class_note.php. (windmillway)
 - Changed: Changed wording "shnote" to "shared_note" in all language files and references (windmillway)
 - Changed: Prevent (for now) [+]Add Shared Note menu appearing under add "Regular" NOTE menu (windmillway)
 - Changed: Corrected error in SQL in auto-complete feature for Shared Note edit field. (windmillway)
 - Merged: Merge changes r5091 - r5095 from the trunk. (windmillway)
 - Added: auto-complete feature to Shared Note edit field (windmillway)
 - Merged: Merge changes r5085 - r5090 from the trunk, fix: deletion of links to deleted notes. (fisharebest)
 - Merged: Merge changes r5074 - r5084 from the trunk. (windmillway)
 - Changed: Shared Notes: Minor adjustments to edit window size, Fixed error when user does not have Accept Change Auth. (windmillway)
 - Changed: Fixed delete Shared Note on Edit Options on shnote.php page (windmillway)
 - Changed: shnote.php - Hide Edit link when not logged in, cleaned up JavaScript code to conform with PGV norms. (windmillway)