@@ -53,7 +53,6 @@ $pgv_lang["ellipsis"]					= "\xE2\x80\xA6";
 $pgv_lang["showUnknown"]				= "«Geschlecht unbekannt» zeigen";
 $pgv_lang["count"]						= "Anzahl";
 $pgv_lang["age_differences"]			= "Datendifferenzen zeigen";
-$pgv_lang["date_of_entry"]				= "Datum des Eintrages in der ursprünglichen Quelle";
 $pgv_lang["multi_site_search"] 			= "Webseiten durchsuchen";
 $pgv_lang["switch_lifespan"]			= "Lebenspannen-Diagramm zeigen";
 $pgv_lang["switch_timeline"]			= "Lebenspannenanzeige zeigen";
@@ -875,6 +874,7 @@ $pgv_lang["mother_in_law"]				= "Schwiegermutter";
 $pgv_lang["father_in_law"]				= "Schwiegervater";
 $pgv_lang["brother_in_law"]				= "Schwager";
 $pgv_lang["sister_in_law"]				= "Schwägerin";
+$pgv_lang["brothers_wife"]				= "Schwägerin"; // brother's wife
 $pgv_lang["son_in_law"]					= "Schwiegersohn";
 $pgv_lang["daughter_in_law"]			= "Schwiegertochter";
 $pgv_lang["uncle_in_law"]				= "Schwiegeronkel";
