@@ -10,6 +10,7 @@
 
 
 Version 4.2.0 CA
+ - Merged: Merge changes r5122 - r5127 from the trunk. (windmillway)
  - Added: Added missing Fact Tags to Note.php (windmillway)
  - Merged: Merge changes r5105 - r5121 from the trunk. (windmillway)
  - Added: Level 1 NOTE @Nxxx@ Shared Note support for Indi - Notes Tab page (windmillway)
